--- a/Source/thesis.tex
+++ b/Source/thesis.tex
@@ -3,16 +3,30 @@
 \usepackage{amssymb}
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
-\usepackage[polish]{babel}
+\usepackage{url}
+\usepackage{hyperref}
+\usepackage[table,xcdraw]{xcolor}
+\hypersetup{
+	pdftitle={Głębokie uczenie maszynowe a neuronauka},
+	pdfsubject={Praca licencjacka},
+	pdfauthor={Mateusz Piotr Moruś},
+	pdfkeywords={}
+}
+\usepackage{graphicx}
+
+
+\graphicspath{ {./Images/} }
+
+\AtBeginDocument{\let\textlabel\label}
 
 \title{Głębokie uczenie maszynowe a neuronauka}
 
-\author{Mateusz Piotr Moruś}             %your name
-\college{Instytut Filozofii}  %your college
-
-\renewcommand{\submittedtext}{Praca Licencjacka}
-\degree{Kognitywistyka}     %the degree
-\degreedate{Lublin 2021}         %the degree date
+\author{Mateusz Piotr Moruś}
+\college{Instytut Filozofii}
+\university{Uniwersytet Marii Curie-Skłodowskiej w Lublinie}
+\submittedtext{Praca licencjacka}
+\degree{Kognitywistyka}
+\degreedate{Lublin 2021}
 
 %end the preamble and start the document
 \begin{document}
@@ -28,15 +42,19 @@
 \maketitle                  % create a title page from the preamble info
 % \include{dedication}        % include a dedication.tex file
 % \include{acknowledgements}  % include an acknowledgements.tex file
-\include{abstract}          % include the abstract
+% \include{abstract}          % include the abstract
 
 \begin{romanpages}          % start roman page numbering
 	\tableofcontents            % generate and include a table of contents
-	% \listoffigures              % generate and include a list of figures
+	\listoffigures              % generate and include a list of figures
+	% \listoftables              % generate and include a list of tables
 \end{romanpages}            % end roman page numbering
 
 %now include the files of latex for each of the chapters etc
+\include{introduction}
 \include{chapter1}
+\include{chapter2}
+\include{chapter3}
 
 %now enable appendix numbering format and include any appendices
 %\appendix
@@ -48,7 +66,7 @@
 %uncomment next line to change bibliography name to references
 %\renewcommand{\bibname}{References}
 \bibliography{refs}        %use a bibtex bibliography file refs.bib
-\bibliographystyle{plain}  %use the plain bibliography style
+% \bibliographystyle{plain}  %use the plain bibliography style
+\bibliographystyle{unsrt}  %use the plain bibliography style ordered by citation
 
 \end{document}
-
