Zmiana tytułu pracy

--- a/Source/thesis.tex
+++ b/Source/thesis.tex
@@ -7,7 +7,7 @@
 \usepackage{hyperref}
 \usepackage[table,xcdraw]{xcolor}
 \hypersetup{
-	pdftitle={Głębokie uczenie maszynowe a neuronauka},
+	pdftitle={Uczenie głębokie i maszynowe a mózg},
 	pdfsubject={Praca licencjacka},
 	pdfauthor={Mateusz Piotr Moruś},
 	pdfkeywords={}
@@ -19,7 +19,7 @@
 
 \AtBeginDocument{\let\textlabel\label}
 
-\title{Głębokie uczenie maszynowe a neuronauka}
+\title{Uczenie głębokie i maszynowe a mózg}
 
 \author{Mateusz Piotr Moruś}
 \college{Instytut Filozofii}
