Początek pierwszego rozdziału

--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -1,3 +1,11 @@
+@incollection{koza1996automated,
+	title     = {Automated design of both the topology and sizing of analog electrical circuits using genetic programming},
+	author    = {Koza, John R and Bennett, Forrest H and Andre, David and Keane, Martin A},
+	booktitle = {Artificial Intelligence in Design’96},
+	pages     = {151--170},
+	year      = {1996},
+	publisher = {Springer}
+}
 @article{marblestone2016toward,
 	title     = {Toward an integration of deep learning and neuroscience},
 	author    = {Marblestone, Adam H and Wayne, Greg and Kording, Konrad P},
@@ -6,4 +14,13 @@
 	pages     = {94},
 	year      = {2016},
 	publisher = {Frontiers}
+}
+@incollection{vroon1987man,
+	title     = {Man-machine analogs and theoretical mainstreams in psychology},
+	author    = {Vroon, Pieter A},
+	booktitle = {Advances in psychology},
+	volume    = {40},
+	pages     = {393--414},
+	year      = {1987},
+	publisher = {Elsevier}
 }
