--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -1,3 +1,19 @@
+@book{braitenberg1986vehicles,
+	title     = {Vehicles: Experiments in synthetic psychology},
+	author    = {Braitenberg, Valentino},
+	year      = {1986},
+	publisher = {MIT press}
+}
+@article{haykin1994neural,
+	title     = {Neural networks, a comprehensive foundation},
+	author    = {Haykin, Simon and Lippmann, Richard},
+	journal   = {International journal of neural systems},
+	volume    = {5},
+	number    = {4},
+	pages     = {363--364},
+	year      = {1994},
+	publisher = {Singapore; Teaneck, NJ: World Scientific, c1989-}
+}
 @incollection{koza1996automated,
 	title     = {Automated design of both the topology and sizing of analog electrical circuits using genetic programming},
 	author    = {Koza, John R and Bennett, Forrest H and Andre, David and Keane, Martin A},
@@ -14,6 +30,37 @@
 	pages     = {94},
 	year      = {2016},
 	publisher = {Frontiers}
+}
+@article{mcculloch1943logical,
+	title     = {A logical calculus of the ideas immanent in nervous activity},
+	author    = {McCulloch, Warren S and Pitts, Walter},
+	journal   = {The bulletin of mathematical biophysics},
+	volume    = {5},
+	number    = {4},
+	pages     = {115--133},
+	year      = {1943},
+	publisher = {Springer}
+}
+@book{minsky2017perceptrons,
+	title     = {Perceptrons: An introduction to computational geometry},
+	author    = {Minsky, Marvin and Papert, Seymour A},
+	year      = {2017},
+	publisher = {MIT press}
+}
+@techreport{rosenblatt1961principles,
+	title       = {Principles of neurodynamics. perceptrons and the theory of brain mechanisms},
+	author      = {Rosenblatt, Frank},
+	year        = {1961},
+	institution = {Cornell Aeronautical Lab Inc Buffalo NY}
+}
+@article{sharma2017activation,
+	title   = {Activation functions in neural networks},
+	author  = {Sharma, Sagar and Sharma, Simone},
+	journal = {Towards Data Science},
+	volume  = {6},
+	number  = {12},
+	pages   = {310--316},
+	year    = {2017}
 }
 @incollection{vroon1987man,
 	title     = {Man-machine analogs and theoretical mainstreams in psychology},
