--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -62,6 +62,23 @@
 	pages   = {310--316},
 	year    = {2017}
 }
+@article{solari2011cognitive,
+	title     = {Cognitive consilience: primate non-primary neuroanatomical circuits underlying cognition},
+	author    = {Solari, Soren Van Hout and Stoner, Rich Martin},
+	journal   = {Frontiers in neuroanatomy},
+	volume    = {5},
+	pages     = {65},
+	year      = {2011},
+	publisher = {Frontiers}
+}
+@inproceedings{sutskever2013importance,
+	title        = {On the importance of initialization and momentum in deep learning},
+	author       = {Sutskever, Ilya and Martens, James and Dahl, George and Hinton, Geoffrey},
+	booktitle    = {International conference on machine learning},
+	pages        = {1139--1147},
+	year         = {2013},
+	organization = {PMLR}
+}
 @incollection{vroon1987man,
 	title     = {Man-machine analogs and theoretical mainstreams in psychology},
 	author    = {Vroon, Pieter A},
