--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -4,6 +4,36 @@
 	year      = {1986},
 	publisher = {MIT press}
 }
+@article{bruderer1996organizational,
+	title     = {Organizational evolution, learning, and selection: A genetic-algorithm-based model},
+	author    = {Bruderer, Erhard and Singh, Jitendra V},
+	journal   = {Academy of management journal},
+	volume    = {39},
+	number    = {5},
+	pages     = {1322--1349},
+	year      = {1996},
+	publisher = {Academy of Management Briarcliff Manor, NY 10510}
+}
+@article{casey1989computational,
+	author  = {Casey, Gerard and Moran, Aidan},
+	year    = {2012},
+	month   = {11},
+	pages   = {143-161},
+	title   = {The Computational Metaphor and Cognitive Psychology},
+	volume  = {10},
+	journal = {The Irish Journal of Psychology},
+	doi     = {10.1080/03033910.1989.10557739}
+}
+@article{hassabis2017neuroscience,
+	title     = {Neuroscience-inspired artificial intelligence},
+	author    = {Hassabis, Demis and Kumaran, Dharshan and Summerfield, Christopher and Botvinick, Matthew},
+	journal   = {Neuron},
+	volume    = {95},
+	number    = {2},
+	pages     = {245--258},
+	year      = {2017},
+	publisher = {Elsevier}
+}
 @article{haykin1994neural,
 	title     = {Neural networks, a comprehensive foundation},
 	author    = {Haykin, Simon and Lippmann, Richard},
@@ -52,6 +82,19 @@
 	author      = {Rosenblatt, Frank},
 	year        = {1961},
 	institution = {Cornell Aeronautical Lab Inc Buffalo NY}
+}
+@techreport{rumelhart1985learning,
+	title       = {Learning internal representations by error propagation},
+	author      = {Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+	year        = {1985},
+	institution = {California Univ San Diego La Jolla Inst for Cognitive Science}
+}
+@article{searle1980minds,
+	title   = {Minds, brains, and programs},
+	author  = {Searle, John R and others},
+	journal = {The Turing Test: Verbal Behaviour as the Hallmark of Intelligence},
+	pages   = {201--224},
+	year    = {1980}
 }
 @article{sharma2017activation,
 	title   = {Activation functions in neural networks},
