Przeniesienie początku rozdziału 2 na koniec rozdziału 1

--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -1,8 +1,20 @@
+@article{bochkarev6109average,
+	title   = {Average word length dynamics as indicator of cultural changes in society},
+	author  = {Bochkarev, VV and Shevlyakova, AV and Solovyev, VD},
+	year    = {2012},
+	journal = {arXiv preprint arXiv:1208.6109}
+}
 @book{braitenberg1986vehicles,
 	title     = {Vehicles: Experiments in synthetic psychology},
 	author    = {Braitenberg, Valentino},
 	year      = {1986},
 	publisher = {MIT press}
+}
+@article{brown2020language,
+	title   = {Language models are few-shot learners},
+	author  = {Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+	journal = {arXiv preprint arXiv:2005.14165},
+	year    = {2020}
 }
 @article{bruderer1996organizational,
 	title     = {Organizational evolution, learning, and selection: A genetic-algorithm-based model},
@@ -24,6 +36,20 @@
 	journal = {The Irish Journal of Psychology},
 	doi     = {10.1080/03033910.1989.10557739}
 }
+@misc{de2018deep,
+	title     = {Deep learning and computational neuroscience},
+	author    = {De Schutter, Erik},
+	year      = {2018},
+	publisher = {Springer}
+}
+@incollection{fallon2017neuroanatomical,
+	title     = {Neuroanatomical background to understanding the brain of the young psychopath},
+	author    = {Fallon, James H},
+	booktitle = {Biosocial Theories of Crime},
+	pages     = {395--421},
+	year      = {2017},
+	publisher = {Routledge}
+}
 @article{hassabis2017neuroscience,
 	title     = {Neuroscience-inspired artificial intelligence},
 	author    = {Hassabis, Demis and Kumaran, Dharshan and Summerfield, Christopher and Botvinick, Matthew},
@@ -44,6 +70,26 @@
 	year      = {1994},
 	publisher = {Singapore; Teaneck, NJ: World Scientific, c1989-}
 }
+@article{hinton2006fast,
+	title     = {A fast learning algorithm for deep belief nets},
+	author    = {Hinton, Geoffrey E and Osindero, Simon and Teh, Yee-Whye},
+	journal   = {Neural computation},
+	volume    = {18},
+	number    = {7},
+	pages     = {1527--1554},
+	year      = {2006},
+	publisher = {MIT Press}
+}
+@article{ingalhalikar2014sex,
+	title     = {Sex differences in the structural connectome of the human brain},
+	author    = {Ingalhalikar, Madhura and Smith, Alex and Parker, Drew and Satterthwaite, Theodore D and Elliott, Mark A and Ruparel, Kosha and Hakonarson, Hakon and Gur, Raquel E and Gur, Ruben C and Verma, Ragini},
+	journal   = {Proceedings of the National Academy of Sciences},
+	volume    = {111},
+	number    = {2},
+	pages     = {823--828},
+	year      = {2014},
+	publisher = {National Acad Sciences}
+}
 @incollection{koza1996automated,
 	title     = {Automated design of both the topology and sizing of analog electrical circuits using genetic programming},
 	author    = {Koza, John R and Bennett, Forrest H and Andre, David and Keane, Martin A},
@@ -51,6 +97,14 @@
 	pages     = {151--170},
 	year      = {1996},
 	publisher = {Springer}
+}
+@misc{li2020OpenAI,
+	title        = {OpenAI's GPT-3 Language Model: A Technical Overview},
+	author       = {Li, Chuan},
+	year         = {2020},
+	howpublished = {\url{https://lambdalabs.com/blog/demystifying-gpt-3/}},
+	note         = {Dostęp: 20 maja 2021},
+	organization = {Lambda labs}
 }
 @article{marblestone2016toward,
 	title     = {Toward an integration of deep learning and neuroscience},
@@ -88,6 +142,16 @@
 	author      = {Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
 	year        = {1985},
 	institution = {California Univ San Diego La Jolla Inst for Cognitive Science}
+}
+@article{rushton1996brain,
+	title     = {Brain size and cognitive ability: Correlations with age, sex, social class, and race},
+	author    = {Rushton, J Philippe and Ankney, C Davison},
+	journal   = {Psychonomic Bulletin \& Review},
+	volume    = {3},
+	number    = {1},
+	pages     = {21--36},
+	year      = {1996},
+	publisher = {Springer}
 }
 @article{searle1980minds,
 	title   = {Minds, brains, and programs},
