--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -1,3 +1,23 @@
+@article{andrieu2003introduction,
+	title     = {An introduction to MCMC for machine learning},
+	author    = {Andrieu, Christophe and De Freitas, Nando and Doucet, Arnaud and Jordan, Michael I},
+	journal   = {Machine learning},
+	volume    = {50},
+	number    = {1},
+	pages     = {5--43},
+	year      = {2003},
+	publisher = {Springer}
+}
+@article{bechtel1993case,
+	title     = {The case for connectionism},
+	author    = {Bechtel, William},
+	journal   = {Philosophical studies},
+	volume    = {71},
+	number    = {2},
+	pages     = {119--154},
+	year      = {1993},
+	publisher = {Springer}
+}
 @article{bochkarev6109average,
 	title   = {Average word length dynamics as indicator of cultural changes in society},
 	author  = {Bochkarev, VV and Shevlyakova, AV and Solovyev, VD},
@@ -36,6 +56,22 @@
 	journal = {The Irish Journal of Psychology},
 	doi     = {10.1080/03033910.1989.10557739}
 }
+@article{copeland1996alan,
+	title     = {On Alan Turing's anticipation of connectionism},
+	author    = {Copeland, B Jack and Proudfoot, Diane},
+	journal   = {Synthese},
+	volume    = {108},
+	number    = {3},
+	pages     = {361--377},
+	year      = {1996},
+	publisher = {Springer}
+}
+@book{dayan2001theoretical,
+	title     = {Theoretical neuroscience: computational and mathematical modeling of neural systems},
+	author    = {Dayan, Peter and Abbott, Laurence F},
+	year      = {2001},
+	publisher = {Computational Neuroscience Series}
+}
 @misc{de2018deep,
 	title     = {Deep learning and computational neuroscience},
 	author    = {De Schutter, Erik},
@@ -49,6 +85,24 @@
 	pages     = {395--421},
 	year      = {2017},
 	publisher = {Routledge}
+}
+@inproceedings{gal2016dropout,
+	title        = {Dropout as a bayesian approximation: Representing model uncertainty in deep learning},
+	author       = {Gal, Yarin and Ghahramani, Zoubin},
+	booktitle    = {international conference on machine learning},
+	pages        = {1050--1059},
+	year         = {2016},
+	organization = {PMLR}
+}
+@article{harnad1990symbol,
+	title     = {The symbol grounding problem},
+	author    = {Harnad, Stevan},
+	journal   = {Physica D: Nonlinear Phenomena},
+	volume    = {42},
+	number    = {1-3},
+	pages     = {335--346},
+	year      = {1990},
+	publisher = {Elsevier}
 }
 @article{hassabis2017neuroscience,
 	title     = {Neuroscience-inspired artificial intelligence},
@@ -90,6 +144,31 @@
 	year      = {2014},
 	publisher = {National Acad Sciences}
 }
+@misc{Izhikevich2006why,
+	title        = {Why did I do that?},
+	author       = {Izhikevich, Eugene M.},
+	year         = {2006},
+	howpublished = {\url{https://www.izhikevich.org/human_brain_simulation/why.htm}},
+	note         = {Dostęp: 25 maja 2021}
+}
+@article{izhikevich2008large,
+	title     = {Large-scale model of mammalian thalamocortical systems},
+	author    = {Izhikevich, Eugene M and Edelman, Gerald M},
+	journal   = {Proceedings of the national academy of sciences},
+	volume    = {105},
+	number    = {9},
+	pages     = {3593--3598},
+	year      = {2008},
+	publisher = {National Acad Sciences}
+}
+@incollection{jaynes1988does,
+	title     = {How does the brain do plausible reasoning?},
+	author    = {Jaynes, Edwin Thompson},
+	booktitle = {Maximum-entropy and Bayesian methods in science and engineering},
+	pages     = {1--24},
+	year      = {1988},
+	publisher = {Springer}
+}
 @incollection{koza1996automated,
 	title     = {Automated design of both the topology and sizing of analog electrical circuits using genetic programming},
 	author    = {Koza, John R and Bennett, Forrest H and Andre, David and Keane, Martin A},
@@ -98,6 +177,12 @@
 	year      = {1996},
 	publisher = {Springer}
 }
+@book{laird2019soar,
+	title     = {The Soar cognitive architecture},
+	author    = {Laird, John E},
+	year      = {2019},
+	publisher = {MIT press}
+}
 @misc{li2020OpenAI,
 	title        = {OpenAI's GPT-3 Language Model: A Technical Overview},
 	author       = {Li, Chuan},
@@ -105,6 +190,12 @@
 	howpublished = {\url{https://lambdalabs.com/blog/demystifying-gpt-3/}},
 	note         = {Dostęp: 20 maja 2021},
 	organization = {Lambda labs}
+}
+@article{mandt2017stochastic,
+	title   = {Stochastic gradient descent as approximate bayesian inference},
+	author  = {Mandt, Stephan and Hoffman, Matthew D and Blei, David M},
+	journal = {arXiv preprint arXiv:1704.04289},
+	year    = {2017}
 }
 @article{marblestone2016toward,
 	title     = {Toward an integration of deep learning and neuroscience},
@@ -130,6 +221,21 @@
 	author    = {Minsky, Marvin and Papert, Seymour A},
 	year      = {2017},
 	publisher = {MIT press}
+}
+@incollection{newell2007computer,
+	title     = {Computer science as empirical inquiry: Symbols and search},
+	author    = {Newell, Allen and Simon, Herbert A},
+	booktitle = {ACM Turing award lectures},
+	pages     = {1975},
+	year      = {2007}
+}
+@inproceedings{real2017large,
+	title        = {Large-scale evolution of image classifiers},
+	author       = {Real, Esteban and Moore, Sherry and Selle, Andrew and Saxena, Saurabh and Suematsu, Yutaka Leon and Tan, Jie and Le, Quoc V and Kurakin, Alexey},
+	booktitle    = {International Conference on Machine Learning},
+	pages        = {2902--2911},
+	year         = {2017},
+	organization = {PMLR}
 }
 @techreport{rosenblatt1961principles,
 	title       = {Principles of neurodynamics. perceptrons and the theory of brain mechanisms},
